# test-technique-vif-api-dashboard

./: .gitignore  README.md  pyproject.toml
test_technique_vif_api_dashboard/api/: .gitignore  api.env  app.py
test_technique_vif_api_dashboard/dashboard/: dashboard.env  dashboard.py  dashboard_functions.py
